# IRCDL

./: .gitignore  OC_queries.py  pyproject.toml
IRCDL/: OC_queries.py  community_analisys.py  crossref_query.py  word_cloud_gen.py
