[project]
name = "ircdl"
version = "0.1.0"
description = ""
authors = [
    {name = "fra533",email = "francescacappelli1998@gmail.com"}
]
license = {text = "ISC License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

